# template-ansible-role

./: .ansible-lint  .ansibledoctor.yml  .example.envrc  .gitignore  .pre-commit-config.yaml  .yamllint  HEADER.md  LICENSE  pyproject.toml  requirements.dev.txt
.github/workflows/: ci.yml
meta/: argument_specs.yml  main.yml
molecule/default/: converge.yml  molecule.yml  verify.example.yml
molecule/default/group_vars/: all.yml
molecule/default/host_vars/: localhost.yml
